# genovisio_MarCNV

./: CHANGELOG.md  README.md  pyproject.toml
marcnv/: classify_batch.py  classify_cnv.py
marcnv/src/: mongo.py
marcnv/src/acmg/: acmg_classify.py  helpers.py
marcnv/src/acmg/data/: acmg_gain.tsv  acmg_loss.tsv
marcnv/src/cytobands/: cytobands.py
