[tool.poetry]
name = "marcnv"
version = "0.1.0"
description = "Automatic evaluation of ACMG criteria for CNV"
authors = ["Marcel Kucharik <marcel.kucharik@geneton.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2"
pymongo = "==4.8"

[tool.poetry.scripts]
marcnv-batch = "marcnv.classify_batch:main"
marcnv-single = "marcnv.classify_cnv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
